View3ds 0.060 - Aug 2011.
1. Header fix by Leency.
2. SSE2 optimizations by me. (Most visable in BUMP_TEX mode.)

View3ds 0.059 - June 2011.
1. Bump and pararell two texture  mapping functions optimizations.
   (files bump_cat.inc & two_tex.inc)
   On my P4 changes are rather non visable, but on dual core in KlbrInWin
   optimizations runs preety nice.
-----------------------------------------------------------------------------------

View3ds 0.058 - June 2011.
1. Blur function optimization on SSE and SSE2 (buttons 'blur' and 'fire').   
-----------------------------------------------------------------------------------
   
View3ds 0.057 - April 2011.
1. By opening file bigger then ~18 KB, and choosing env mode program terminate.
   I remove this bug
-----------------------------------------------------------------------------------

View3ds 0.056 - February 2011.
1. MMX optimizations in 2tex mode (file two_tex.inc).
2. Tiny SSE optimizations (file BUMP_CAT.INC).
3. Bit (two instructions) improved random light generation procedure.
-----------------------------------------------------------------------------------

View3ds 0.055 - January 2011.
1. SSE optimizations (file BUMP_TEX.INC).
2. Compiles correctly in newest FASM.
-----------------------------------------------------------------------------------

View3ds 0.054 - December 2009 (Updated January 2010).
1. Skinned window by Leency.
2. Optimizations.
3. Re map texture, bumps option - allow spherical mapping around each axle (X,Y,Z).
4. Problem with too small memory to generate object fixed. (Problem ocurred with
   house.3ds object and others objects contains less than 1000 faces and points).
-----------------------------------------------------------------------------------

View3ds 0.053 - (?) 2009
1. Optimizations.
-----------------------------------------------------------------------------------

View3ds 0.052 - November 2007.
1. Memory for file is allocated dynamically.
2. Optimizations.